--- a/package.json
+++ b/package.json
@@ -4,17 +4,8 @@
   "license": "MIT",
   "description": "Typescript starter template for hardhat, ethers and react projects using typescript and @web3-react",
   "devDependencies": {
-    "@ethersproject/abi": "^5.4.7",
-    "@ethersproject/providers": "^5.4.7",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^1.0.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.7.14",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "hardhat": "^2.11.1",
     "chai": "^4.2.0",
     "dotenv": "^16.0.2",
     "ethers": "^5.4.7",
